--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="main-content">
         <section class="details-container">
             <img class="details-image" src="images/dog1.jpg" alt="dog1 image">
-            <span class="details-title">YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY</span>
+            <span class="details-title">YYYYYYYY YYYYYYY YY</span>
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
