cw #6 variables, calculations, fonts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h2 class="logo-title">Dogram</h2>
+        <h2 class="logo-title">D o g r a m</h2>
     </header>
     <main class="main-content">
         <section class="details-container">
@@ -23,7 +23,7 @@
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="images/dog1.jpg">
                     <img class="thumbnails-image" src="images/dog1.jpg" alt="dog1 image">
-                    <span class="thumbnails-title">dog1</span>
+                    <span class="thumbnails-title">dog1dog1dog1</span>
                 </a>
 
             </li>
