--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog1.jpg">
+                <a class="thumbnails-anchor" href="images/dog1.jpg"
+                 data-details-title="HHH">
                     <img class="thumbnails-image" src="images/dog1.jpg" alt="dog1 image">
                     <span class="thumbnails-title">dog1dog1dog1</span>
                 </a>
@@ -98,6 +99,7 @@
         &copy; Copyright 2021
         <a href="http://tel-ran.com">Tel-Ran</a>
     </footer>
+   <script src="src/index.js"></script>
 </body>
 
 </html>
