--- a/index.html
+++ b/index.html
@@ -17,80 +17,82 @@
     <main class="main-content">
         <section class="details-container">
             <img class="details-image" src="images/dog1.jpg" alt="dog1 image">
-            <span class="details-title">YYYYYYYY YYYYYYY YY</span>
+            <span class="details-title">The most touchy dog</span>
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
                 <a class="thumbnails-anchor" href="images/dog1.jpg"
-                 data-details-title="HHH">
+                 data-details-title="The most touchy dog">
                     <img class="thumbnails-image" src="images/dog1.jpg" alt="dog1 image">
-                    <span class="thumbnails-title">dog1dog1dog1</span>
+                    <span class="thumbnails-title">brown</span>
                 </a>
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog2.jpg">
+                <a class="thumbnails-anchor" href="images/dog2.jpg" data-details-title="The smartest dog">
                     <img class="thumbnails-image" src="images/dog2.jpg" alt="dog2 image">
-                    <span class="thumbnails-title">dog2</span>
+                    <span class="thumbnails-title">Scientist</span>
                 </a>
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog3.jpg">
+                <a class="thumbnails-anchor" href="images/dog3.jpg" data-details-title="The laziest dog">
                     <img class="thumbnails-image" src="images/dog3.jpg" alt="dog3 image">
-                    <span class="thumbnails-title">dog3</span>
+                    <span class="thumbnails-title">Bummer</span>
                 </a>
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog4.jpg">
+                <a class="thumbnails-anchor" href="images/dog4.jpg" data-details-title="The most serious dog" >
                     <img class="thumbnails-image" src="images/dog4.jpg" alt="dog4 image">
-                    <span class="thumbnails-title">dog4</span>
+                    <span class="thumbnails-title">Speaker</span>
                 </a>
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog5.jpg">
+                <a class="thumbnails-anchor" href="images/dog5.jpg" data-details-title="The most beautiful dog">
                     <img class="thumbnails-image" src="images/dog5.jpg" alt="dog5 image">
-                    <span class="thumbnails-title">dog5</span>
+                    <span class="thumbnails-title">Dolly</span>
                 </a>
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog1.jpg">
+                <a class="thumbnails-anchor" href="images/dog1.jpg"
+                 data-details-title="The most touchy dog">
                     <img class="thumbnails-image" src="images/dog1.jpg" alt="dog1 image">
-                    <span class="thumbnails-title">dog1</span>
+                    <span class="thumbnails-title">brown</span>
                 </a>
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog2.jpg">
+                <a class="thumbnails-anchor" href="images/dog2.jpg" data-details-title="The smartest dog">
                     <img class="thumbnails-image" src="images/dog2.jpg" alt="dog2 image">
-                    <span class="thumbnails-title">dog2</span>
+                    <span class="thumbnails-title">Scientist</span>
                 </a>
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog3.jpg">
+                <a class="thumbnails-anchor" href="images/dog3.jpg" data-details-title="The laziest dog">
                     <img class="thumbnails-image" src="images/dog3.jpg" alt="dog3 image">
-                    <span class="thumbnails-title">dog3</span>
+                    <span class="thumbnails-title">Bummer</span>
                 </a>
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog4.jpg">
+                <a class="thumbnails-anchor" href="images/dog4.jpg" data-details-title="The most serious dog" >
                     <img class="thumbnails-image" src="images/dog4.jpg" alt="dog4 image">
-                    <span class="thumbnails-title">dog4</span>
+                    <span class="thumbnails-title">Speaker</span>
                 </a>
 
             </li>
             <li class="thumbnails-item">
-                <a class="thumbnails-anchor" href="images/dog5.jpg">
+                <a class="thumbnails-anchor" href="images/dog5.jpg" data-details-title="The most beautiful dog">
                     <img class="thumbnails-image" src="images/dog5.jpg" alt="dog5 image">
-                    <span class="thumbnails-title">dog5</span>
+                    <span class="thumbnails-title">Dolly</span>
                 </a>
 
             </li>
+            
 
         </ul>
 
