cw #8 complexed selectors JS and classes

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <header>
         <h2 class="logo-title">D o g r a m</h2>
     </header>
-    <main class="main-content">
+    <main class="main-content hidden">
         <section class="details-container">
             <img class="details-image" src="images/dog1.jpg" alt="dog1 image">
             <span class="details-title">The most touchy dog</span>
+            <button class="hide-button" onclick="hideDetails()">hide details</button>
         </section>
         <ul class="thumbnails-list">
             <li class="thumbnails-item">
