--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h2 class="logo-title">D o g r a m</h2>
     </header>
     <main class="main-content hidden">
+        
         <section class="details-container">
             <img class="details-image" src="images/dog1.jpg" alt="dog1 image">
             <span class="details-title">The most touchy dog</span>
@@ -25,7 +26,7 @@
                 <a class="thumbnails-anchor" href="images/dog1.jpg"
                  data-details-title="The most touchy dog">
                     <img class="thumbnails-image" src="images/dog1.jpg" alt="dog1 image">
-                    <span class="thumbnails-title">brown</span>
+                    <span class="thumbnails-title">Brown</span>
                 </a>
 
             </li>
